[package]
name = "data_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.33.2", features = ["lazy", "describe", "dtype-datetime",
"csv", "parquet"] }
chrono = "0.4.31"
glob = "0.3.1"
